# Deloitte-recruitment

./: .gitignore  README.md
api/: db.sqlite3  pyproject.toml
api/api/: settings.py  urls.py
api/products/: models.py  serializers.py  tests.py  urls.py  views.py
api/products/migrations/: 0001_initial.py
api/users/: serializers.py  services.py  tests.py  urls.py  views.py
frontend/: package-lock.json
frontend/src/: App.js
frontend/src/components/: Products.js  Todos.js  Users.js
python/3/: 3.py
python/5/: 5.py  sample.txt
